WHAT IS NEW?

April ? 2020 [Gorgonzola]

  *** New Features

   * New Plotscripting Features
    * ""any key", etc, includes mouse" option in Mouse Controls menu [Ralph]
    * While encoding .ogg files, add an advanced option not to filter out
      very high frequencies. Useful for certain hissing sfx [Ralph]

  *** Changes

  *** Bugfixes
    * Linux builds should now hopefully work on all Linux systems since 2011
      (as long as SDL & SDL_mixer are installed) [Ralph]
    * On Windows, copy-pasting text caused spaces to be added at line ends,
      and near-full textboxes couldn't be copy-pasted [Ralph]
    * sf#2045: "Lost HP (target)" base attack stat was always 0 [Ralph]
    * Weapon pictures/palettes didn't update in saved games and Test Game
      after a weapon was edited [Ralph]
    * Script IDs could change when you reimported scripts, breaking script
      IDs stored in saved games (didn't affect Test Game) [Ralph]
    * OK, now you can *actually* import .wav files as music.
    * You couldn't import .wav or .mp3 files on Mac OS 10.15 (the utilities
      were still 32-bit) [Ralph]
    * A few fixes for heroes with negative HP not counting as dead when using
      spells outside of battle [Ralph]
    * Bug 1105 "Self"- and "Ally not Self"-target attacks are treated as
      "Ally"-target attacks outside of battle [Ralph]

  *** Stuff Only Developers Will Notice
    * All .py build scripts and utilities will run under Python 3 as well as
      Python 2 [Daniel Würl, Ralph]


January 12 2020 [Fufluns]

  Highlights:
    * Games can be played with mouse or (mostly working) joystick
    * Spritesets and backdrops can be any size
    * Hero counter-attacks
    * Hero MP meters
    * Graphical browsers for sprites, attacks, enemies, maps, textboxes, etc.
    * Enemy Usage and Foemap Statistics screens
    * Menu item colors and real unselectable menu items
    * Line slices
    * PNG, JPEG importing

  *** New Features

   * Graphics and Slices