@@ -4179,6 +4179,32 @@ end
 			<canon>last ascii</canon>
 			<shortname>last ascii</shortname>
 			<description>This command is obsolete. Use <ref>getinputtext</ref> instead, if possible.<lb/>Returns the character code of any currently pressed key, or 0 if none are. If more than one key corresponding to an ascii character is being pressed, then only one can be returned.</description>
+			<seealso>
+				<ref>scancodename</ref>
+			</seealso>
+		</command>
+		<command id="scancodename">
+			<canon>scancode name(string id, scancode, long name)</canon>
+			<shortname>scancode name</shortname>
+			<description>
+				Get a name for a <ref>scancode</ref>, what the key does if Shift isn't pressed,
+				and put it in <p>string id</p>.
+				For example, "7", "Q", "Space", "Caps Lock".
+				<lb/>
+				<p>scancode</p> can be any <tt>key:...</tt> scancode or <ref>usekey</ref>, <ref>menukey</ref>,
+				etc, but not a <tt>joy:...</tt> scancode.
+				<lb/>
+				Normally a long name like "Left Shift" is returned, but if
+				optional argument <p>long name</p> is false, then
+				a one-character string for what the key inserts
+				is returned if available, for example "[" instead of "Left Bracket",
+				with the exception of "Space" and "Enter" and numpad keys like "Numpad Minus" which
+				are always returned as long names.
+			</description>
+			<seealso>
+				<ref>getinputtext</ref>
+				<ref>lastascii</ref>
+			</seealso>
 		</command>
 		<command id="enableinputtext">
 			<canon>enable input text (enable)</canon>
